# kaggle_titanic

./: README.md  pyproject.toml  submission.csv  submission_ensemble.csv
Scripts/: decision_tree.ipynb  ensemble.ipynb  kaggle_titanic.ipynb  logistic_regression.ipynb  random_forest.ipynb
data/: preprocessed_test.csv  preprocessed_train.csv
