[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "machine learning projects"
authors = ["TH"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
